--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -260,7 +260,7 @@ main {
     display: block;
     width: 100%;
     height: 40%;
-    top: 40px;
+    bottom: 40px;
     position: absolute;
     overflow: hidden;
 }
