--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -259,8 +259,8 @@ main {
     padding: 0px;
     display: block;
     width: 100%;
-    height: 40%;
-    bottom: 40px;
+    height: 12%;
+    bottom: 24px;
     position: absolute;
     overflow: hidden;
 }
@@ -280,6 +280,7 @@ main {
 #canny_body img {
     /* display: block; */
     position: absolute;
+    max-height: 160px;
 }
 
 #canny-default {
