--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -274,12 +274,14 @@ main {
     display: block;
     width: 100%;
     height: 100%;
+    display: inline-block!important;
     text-align: center;
 }
 
 #canny_body img {
     /* display: block; */
     position: absolute;
+    display: inline-block!important;
     max-height: 160px;
 }
 
@@ -314,29 +316,22 @@ main {
 
 
 #basket {
-    /* margin-left: -20px; */
     position: absolute;
-    bottom: 16px;
-    /* background: url('https://www.cannaco.us/assets/sock-drop/canny-hyped.png'); */
-    /* background-size: cover; */
-    /* background-repeat: no-repeat; */
-    /* text-align: center; */
     z-index: 11;
-    /* margin-left: -110px; */
     margin-left: -80px;
     max-width: 8.5%;
     display: inline-block!important;
-    
+    padding: 0px;
+    width: 100%;
+    height: 12%;
+    bottom: 24px;
+    position: absolute;
+    overflow: hidden;
 }
 
 #basket img {
-    /* height: 160px; */
-    /* width: 210px; */
     display: inline-block!important;
     width: 100%;
-    /* max-height: 1%; */
-    /* height: 1%;
-    width: 2%; */
 }
 
 
