--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -307,7 +307,7 @@ main {
 
 
 #basket {
-    position: absolute;
+    position: relative;
     z-index: 11;
     margin-left: -80px;
     max-width: 8.5%;
@@ -315,8 +315,7 @@ main {
     padding: 0px;
     width: 100%;
     height: 12%;
-    bottom: 0px;
-    position: absolute;
+    bottom: 24px;
     overflow: hidden;
 }
 
