--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -260,7 +260,7 @@ main {
     display: block;
     width: 100%;
     height: 12%;
-    bottom: 0px;
+    bottom: 24px;
     position: absolute;
     overflow: hidden;
 }
@@ -307,7 +307,7 @@ main {
 
 
 #basket {
-    position: relative;
+    position: absolute;
     z-index: 11;
     margin-left: -80px;
     max-width: 8.5%;
