--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -255,78 +255,87 @@ main {
 
 
 
-#canny_holder {
-    padding: 0px;
-    display: block;
-    width: 100%;
-    height: 12%;
-    bottom: 24px;
-    position: absolute;
-    overflow: hidden;
-}
-
-#canny_body {
-    display: inline-block!important;
-}
-
-#canny_body img {
-    /* display: block; */
-    position: absolute;
-    display: inline-block!important;
-    max-height: 160px;
-}
-
-#canny-default {
-    display: block;
-}
-
-#canny-mild {
-    display: none;
-}
-
-#canny-mild.active {
-    display: block;
-}
-
-#canny-medium {
-    display: none;
-}
-
-#canny-medium.active {
-    display: block;
-}
-
-#canny-high {
-    display: none;
-}
-
-#canny-high.active {
-    display: block;
-}
-
-
-
 #basket {
+    /* margin-left: -20px; */
     position: absolute;
+    bottom: 16px;
+    /* background: url('https://www.cannaco.us/assets/sock-drop/canny-hyped.png'); */
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
+    /* text-align: center; */
     z-index: 11;
+    /* margin-left: -110px; */
     margin-left: -80px;
     max-width: 8.5%;
     display: inline-block!important;
-    padding: 0px;
-    width: 100%;
-    height: 12%;
-    bottom: 24px;
-    overflow: hidden;
 }
 
 #basket img {
+    /* height: 160px; */
+    /* width: 210px; */
     display: inline-block!important;
     width: 100%;
-    left: 0%;
+    /* max-height: 1%; */
+    /* height: 1%;
+    width: 2%; */
 }
 
+#basket.hide {
+    display: none!important;
+}
 
+#basket_holder {
+    padding: 0px;
+    display: block;
+    width: 100%;
+    height: 10%;
+    bottom: 40px;
+    position: absolute;
+}
 
+#basket_image {
+    z-index: 100;
+    position: relative;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: inline-block!important;
+    width: 100%;
+}
+
+#basket_image img {
+    /* display: block; */
+    position: absolute;
+}
+
+#basket-default {
+    display: block;
+}
+
+#basket-mild {
+    display: none;
+}
+
+#basket-mild.active {
+    display: block;
+}
+
+#basket-medium {
+    display: none;
+}
+
+#basket-medium.active {
+    display: block;
+}
+
+#basket-high {
+    display: none;
+}
+
+#basket-high.active {
+    display: block;
+}
 
 
 
