--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -9,15 +9,19 @@ main {
     z-index: 100;
     display: none;
     top: 20px;
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
+
 }
 
 #homerchu.active {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #homerchu img {
+    max-width: 40%;
 }
 
 #score_holder {
