--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -15,19 +15,21 @@ main {
     top: 20px;
     width: 100%;
     height: 100%;
-}
-
-#homerchu.active {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#homerchu.active {
     opacity: 100;
 }
 
 #homerchu img {
     max-width: 24%;
-    animation-name: rotate;
-    animation-duration: 2s;
+    -webkit-animation: rotate 2s linear infinite;
+    -moz-animation: rotate 2s linear infinite;
+    -ms-animation: rotate 2s linear infinite;
+    -o-animation: rotate 2s linear infinite;
 }
 
 @keyframes rotate {
@@ -38,14 +40,6 @@ main {
       transform: rotate(360deg);
     }
 }
-
-.rotate {
-    -webkit-animation: rotating 2s linear infinite;
-    -moz-animation: rotating 2s linear infinite;
-    -ms-animation: rotating 2s linear infinite;
-    -o-animation: rotating 2s linear infinite;
-}
-
   
 
 
