--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -25,19 +25,21 @@ main {
 }
 
 #homerchu img {
-    max-width: 24%;
-    -webkit-animation: rotate 2s linear infinite;
-    -moz-animation: rotate 2s linear infinite;
-    -ms-animation: rotate 2s linear infinite;
-    -o-animation: rotate 2s linear infinite;
+    max-width: 16%;
+    -webkit-animation: rotate 5s linear infinite;
+    -moz-animation: rotate 5s linear infinite;
+    -ms-animation: rotate 5s linear infinite;
+    -o-animation: rotate 5s linear infinite;
 }
 
 @keyframes rotate {
     0% {
       transform: rotate(0);
+      transform: translate(0%, 0);
     }
     100% {
       transform: rotate(360deg);
+      transform: translate(-100%, 0);
     }
 }
   
