--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -34,15 +34,13 @@ main {
 
 @keyframes rotate {
     0% {
-        transform: rotate(0);
-        left: 0;
+        transform: translate(+100%, 0) rotate(0);
     }
     50% {
-        left: 100%;
+        transform: translate(0%, 0) rotate(180);
     }
     100% {
-        transform: rotate(360deg);
-        left: 0;   
+        transform: translate(-100%, 0) rotate(360);
     }
 }
   
