--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -26,6 +26,7 @@ main {
 
 #homerchu img {
     max-width: 16%;
+    animation-delay: 2s;
     -webkit-animation: rotate 5s linear infinite;
     -moz-animation: rotate 5s linear infinite;
     -ms-animation: rotate 5s linear infinite;
