--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -9,6 +9,7 @@ main {
 
 
 #homerchu {
+    overflow: hidden;
     position: absolute;
     z-index: 100;
     display: block;
@@ -37,11 +38,8 @@ main {
     0% {
         transform: translate(+400%, 0) rotate(0);
     }
-    50% {
-        transform: translate(0%, 0) rotate(360deg);
-    }
     100% {
-        transform: translate(-100%, 0) rotate(0);
+        transform: translate(-400%, 0) rotate(360deg);
     }
     /* 0% {
     transform: rotate(0) translate(+100%, 0);
