--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -16,6 +16,7 @@ main {
     width: 100%;
     height: 100%;
     display: flex;
+    right: -400px;
     align-items: center;
     justify-content: center;
     z-index: ;
@@ -60,6 +61,7 @@ main {
     top: 20px;
     width: 100%;
     height: 100%;
+    left: -400px;
     display: flex;
     align-items: center;
     justify-content: center;
