--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -12,17 +12,12 @@ main {
     overflow: hidden;
     position: absolute;
     display: block;
-    top: 20px;
+    top: 0px;
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: ;
-}
-
-#homerchu.active {
-    opacity: 100;
 }
 
 #homerchu img {
@@ -54,11 +49,93 @@ main {
 }
 
 
+#homerchu2 {
+    overflow: hidden;
+    position: absolute;
+    display: block;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#homerchu2 img {
+    max-width: 16%;
+    margin-right: -150%;
+    /* -webkit-animation: rotate 7s linear 25s infinite;
+    -moz-animation: rotate 6s linear 25s infinite;
+    -ms-animation: rotate 6s linear 25s infinite;
+    -o-animation: rotate 6s linear 25s infinite; */
+    -webkit-animation: rotate2 7s linear 60s;
+    -moz-animation: rotate2 7s linear 60s;
+    -ms-animation: rotate2 7s linear 60s;
+    -o-animation: rotate2 7s linear 60s;
+}
+
+@keyframes rotate2 {
+    0% {
+        transform: translate(+800%, 0) rotate(-180);
+    }
+    100% {
+        transform: translate(-900%, 0) rotate(360deg);
+    }
+    /* 0% {
+    transform: rotate(0) translate(+100%, 0);
+    }
+    100% {
+    transform: rotate(360deg) translate(-100%, 0);
+    } */
+}
+
+
+#homerchu3 {
+    overflow: hidden;
+    position: absolute;
+    display: block;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#homerchu3 img {
+    max-width: 16%;
+    margin-right: -150%;
+    /* -webkit-animation: rotate 7s linear 25s infinite;
+    -moz-animation: rotate 6s linear 25s infinite;
+    -ms-animation: rotate 6s linear 25s infinite;
+    -o-animation: rotate 6s linear 25s infinite; */
+    -webkit-animation: rotate3 7s linear 100s;
+    -moz-animation: rotate3 7s linear 100s;
+    -ms-animation: rotate3 7s linear 100s;
+    -o-animation: rotate3 7s linear 100s;
+}
+
+@keyframes rotate3 {
+    0% {
+        transform: translate(+800%, 0) rotate(-180);
+    }
+    100% {
+        transform: translate(-900%, 0) rotate(360deg);
+    }
+    /* 0% {
+    transform: rotate(0) translate(+100%, 0);
+    }
+    100% {
+    transform: rotate(360deg) translate(-100%, 0);
+    } */
+}
+
+
 #rick {
     overflow: hidden;
     position: absolute;
     display: block;
-    top: 20px;
+    top: 0px;
     width: 100%;
     height: 100%;
     display: flex;
@@ -76,6 +153,68 @@ main {
 }
 
 @keyframes rotaterick {
+    0% {
+        transform: translate(-800%, 0) rotate(180);
+    }
+    100% {
+        transform: translate(+900%, 0) rotate(-360deg);
+    }
+}
+  
+
+#rick2 {
+    overflow: hidden;
+    position: absolute;
+    display: block;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#rick2 img {
+    max-width: 16%;
+    margin-left: -150%;
+    -webkit-animation: rotaterick2 7s linear 80s;
+    -moz-animation: rotaterick2 7s linear 80s;
+    -ms-animation: rotaterick2 7s linear 80s;
+    -o-animation: rotaterick2 7s linear 80s;
+}
+
+@keyframes rotaterick2 {
+    0% {
+        transform: translate(-800%, 0) rotate(180);
+    }
+    100% {
+        transform: translate(+900%, 0) rotate(-360deg);
+    }
+}
+
+
+#rick3 {
+    overflow: hidden;
+    position: absolute;
+    display: block;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#rick3 img {
+    max-width: 16%;
+    margin-left: -150%;
+    -webkit-animation: rotaterick3 7s linear 120s;
+    -moz-animation: rotaterick3 7s linear 120s;
+    -ms-animation: rotaterick3 7s linear 120s;
+    -o-animation: rotaterick3 7s linear 120s;
+}
+
+@keyframes rotaterick3 {
     0% {
         transform: translate(-800%, 0) rotate(180);
     }
