--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -32,10 +32,13 @@ main {
 
 @keyframes shake {
     0% {
-        transform: translate(0, 0) rotate(-45deg);
+        transform: rotate(-45deg);
+    }
+    50% {
+        transform: rotate(45deg);
     }
     100% {
-        transform: translate(0, 0) rotate(45deg);
+        transform: rotate(-45deg);
     }
 }
 
