--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -18,6 +18,8 @@ main {
     opacity: 0;
     max-width: 20%; 
     max-height: 20%;
+    min-width: 20%; 
+    min-height: 20%;
     transition: all 0.3s;
     -webkit-transition: all 0.3s;
 }
