--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -17,9 +17,9 @@ main {
 #cannami_image img{
     opacity: 0;
     max-width: 20%; 
-    max-height: 20%;
+    max-height: inherit;
     min-width: 20%; 
-    min-height: 20%;
+    min-height: inherit;
     transition: all 0.3s;
     -webkit-transition: all 0.3s;
 }
@@ -27,9 +27,9 @@ main {
 #cannami_image.active img {
     opacity: 100;
     max-width: 60%; 
-    max-height: 60%;
+    max-height: inherit;
     min-width: 60%; 
-    min-height: 60%;
+    min-height: inherit;
     transition: all 0.3s;
     -webkit-transition: all 0.3s;
     -webkit-animation: shake 2s linear infinite;
