--- a/public/index.less
+++ b/public/index.less
@@ -47,7 +47,7 @@ body {
             }
         }
         #products {
-            padding: 0px 12px 12px 12px;
+            padding: 12px 12px 12px 12px;
             display: block;
         }
         #mc_embed_signup {
@@ -86,6 +86,43 @@ body {
         }
     }
 }
+
+
+/*************************************************************
+            BODY
+*************************************************************/
+html,
+body { 
+    header {
+    }
+    main {
+        max-width: 100vw;
+        width: 100%;
+//        padding: 0px;
+        #products {
+            display: block;
+        }
+        #products.remove {
+            display: none;
+        }
+        .container {
+            max-width: 1440px!important;
+            margin: 0 auto!important;
+            padding: 0px;
+            overflow-y: none;
+            .col {
+                padding: 12px;
+            }
+        }
+        #strains {
+            .col {
+            }
+        }
+    }
+}
+
+
+
 
 /*************************************************************
             CARDS
