--- a/public/sock-drop.css
+++ b/public/sock-drop.css
@@ -1062,13 +1062,13 @@ form {
         font-size: 16px!important;
     }
 
-    #products .card .card-body img {
+    /* #products .card .card-body img {
         max-height: 360px;
     }
 
     #intro .row img {
         max-width: 360px;
-    }
+    } */
 }
 
 
