--- a/public/index.css
+++ b/public/index.css
@@ -168,7 +168,7 @@ body main .container .col {
   }
   html main #products,
   body main #products {
-    padding: 0px;
+    padding: 8px 0px 16px 0px;
   }
   html #mc_embed_signup,
   body #mc_embed_signup {
